<resources>
    <string name="app_name">dumb_password</string>

    <!-- New Password -->
    <string name="new_password">Nova Senha</string>
    <string name="group">Grupo</string>
    <string name="select_group">Selecione um grupo</string>
    <string name="must_select_group">* Selecione um grupo</string>
    <string name="platform">Plataforma</string>
    <string name="select_platform">Selecione uma plataforma</string>
    <string name="must_select_platform">* Selecione uma plataforma</string>
    <string name="password">Senha</string>
    <string name="create_password">Criar senha</string>
    <string name="type_a_password">* Escreva uma senha</string>

    <!-- Group -->
    <string name="groups">Grupos</string>
    <string name="non_groups_found">Você ainda não possui nenhum grupo</string>
    <string name="new_group">Novo grupo</string>
    <string name="group_examples">Trabalho, jogos, redes sociais…</string>
    <string name="exclude">Excluir</string>
    <string name="edit">Editar</string>

    <!-- Platform -->
    <string name="platform_examples">Teams, Gmail, Outlook…</string>
    <string name="new_platform">Nova plataforma</string>

</resources>