<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="?attr/containerColor"
    android:orientation="vertical">

    <include
        android:id="@+id/includeAppBar"
        layout="@layout/include_app_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <br.com.moscatech.dumbpassword.ui.custom_view.DefaultContainerView
                android:id="@+id/dcvGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:contentText="@string/select_group"
                app:errorText="@string/must_select_group"
                app:titleText="@string/group"
                tools:showError="true" />

            <br.com.moscatech.dumbpassword.ui.custom_view.DefaultContainerView
                android:id="@+id/dcvPlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentText="@string/select_platform"
                app:errorText="@string/must_select_platform"
                app:titleText="@string/platform"
                tools:showError="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>